@@ -1,5 +1,11 @@
 2011-08-20  Stefano Lattarini  <stefano.lattarini@gmail.com>
 
+	cosmetics: fix botched indentation in perl TAP driver
+	* lib/tap-driver.pl (main, Getopt::Long::GetOptions): Fix
+	improper or botched indentation.
+
+2011-08-20  Stefano Lattarini  <stefano.lattarini@gmail.com>
+
 	coverage: some more tests on corner cases of TAP support
 	* tests/tap-no-spurious.test: Extend checks verifying that a line
 	matching, say, the regex "^ok[a-zA-Z0-9_]" is *not* considered a
